Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9955,7 +9955,7 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200225072011342" modified="20200225085016048" title="$:/state/sidebar" revision="2" bag="default">
+<div created="20200225072011342" modified="20200225085531867" title="$:/state/sidebar" revision="4" bag="default">
 <pre>yes</pre>
 </div>
 <div created="20200225071910626" modified="20200225071910626" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
@@ -9973,7 +9973,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200225071904262" list="" modified="20200225071904262" title="$:/StoryList" revision="26" bag="default">
+<div created="20200225071904262" list="" modified="20200225085101046" title="$:/StoryList" revision="30" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -14245,13 +14245,14 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Regularization and Overfitting]]
 # [[Overview of Supervised Learning]]</pre>
 </div>
-<div created="20200115032001461" modified="20200225052822179" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200115032001461" modified="20200225085124854" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>!!! Syllabus
 # [[Computer Abstractions and Technology]]
 # [[Instructions: Language of the Computer]]
 # [[Arithmetic for Computers]]
 # [[The Processor (Single Cycle Data Paths)]]
-# [[The Processor (Pipelining)]]$$</pre>
+# [[The Processor (Pipelining)]]
+# [[The Processor (Advanced Pipelining)]]</pre>
 </div>
 <div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
