--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -9955,12 +9951,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200225072011342" modified="20200225085531867" title="$:/state/sidebar" revision="4" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200225071910626" modified="20200225071910626" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9973,7 +9963,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200225071904262" list="" modified="20200225085101046" title="$:/StoryList" revision="30" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -13810,7 +13800,7 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 * [[Chapter 4 |Chapter 4 (The Hundred-Page Machine Learning Book)]]
 * [[Chapter 5 |Chapter 5 (The Hundred-Page Machine Learning Book)]]</pre>
 </div>
-<div created="20200225052828231" modified="20200225085009975" tags="[[computer architecture]]" title="The Processor (Pipelining)" type="text/vnd.tiddlywiki" revision="11" bag="default">
+<div created="20200225052828231" modified="20200225085011081" tags="[[computer architecture]]" title="The Processor (Pipelining)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__Basics: Idealized View__
 
 Performance Issues - longest delay determines clock period:
@@ -14245,7 +14235,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Regularization and Overfitting]]
 # [[Overview of Supervised Learning]]</pre>
 </div>
-<div created="20200115032001461" modified="20200225085124854" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200115032001461" modified="20200225085125925" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Computer Abstractions and Technology]]
 # [[Instructions: Language of the Computer]]
