Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,12 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/moresidebar-1850697562</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -196,6 +190,8 @@ Error message and password prompt
 <li>$:/temp/info-plugin</li>
 
 <li>$:/temp/search</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -249,11 +245,17 @@ Error message and password prompt
 
 <li>Contraction Mapping Theorem (and application to RL)</li>
 
+<li>Convolutional Neural Networks</li>
+
 <li>Data Imputation Techniques</li>
 
 <li>Dealing with Missing Features</li>
 
 <li>Decision Trees</li>
+
+<li>Deep Learning</li>
+
+<li>Deep Learning Practical Tips</li>
 
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
 
@@ -319,6 +321,8 @@ Error message and password prompt
 
 <li>Logistic Regression</li>
 
+<li>Machine Learning Practical Tips</li>
+
 <li>Markov Decision Processes</li>
 
 <li>Markov Decision Processes from scratch</li>
@@ -373,6 +377,8 @@ Error message and password prompt
 
 <li>Overview of Machine Learning</li>
 
+<li>Overview of Supervised Learning</li>
+
 <li>PaaS</li>
 
 <li>Perceptron</li>
@@ -397,7 +403,7 @@ Error message and password prompt
 
 <li>Real Numbers</li>
 
-<li>Recurrent Neural Network</li>
+<li>Recurrent Neural Networks</li>
 
 <li>Regularization and Overfitting</li>
 
@@ -462,6 +468,8 @@ Error message and password prompt
 <li>UCLA Math 131AH - Real Analysis</li>
 
 <li>UCLA Math 168 - Introduction to Networks</li>
+
+<li>Unsupervised Learning</li>
 
 <li>Value Function Approximation</li>
 
@@ -9963,15 +9971,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200225203736281" modified="20200227023531624" title="$:/state/sidebar" revision="6" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200225203555491" modified="20200225203556719" title="$:/state/tab/moresidebar-1850697562" revision="2" bag="default">
-<pre>$:/core/ui/MoreSideBar/All</pre>
-</div>
-<div created="20200225195428222" modified="20200225203552289" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9984,7 +9983,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200225195434903" list="[[UCLA CS M151B - Computer Architecture]]" modified="20200225221802762" title="$:/StoryList" revision="59" bag="default">
+<div created="20200227025629167" list="[[UCLA CS M146 - Machine Learning]] [[Overview of Supervised Learning]] Welcome [[How to Contribute?]]" modified="20200227061451759" title="$:/StoryList" revision="31" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10045,8 +10044,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200225221732697" modified="20200227023719053" title="$:/temp/search" revision="18" bag="default">
+<div created="20200227025623680" modified="20200227061549443" title="$:/temp/search" revision="54" bag="default">
 <pre></pre>
+</div>
+<div created="20200227023745997" modified="20200227023751835" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>$:/themes/tiddlywiki/vanilla</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -11247,6 +11249,9 @@ Prove that Bellman Expectation Backup is a contraction:
 
 By this theorem and by similar proof of contraction we can show that policy evaluation, policy iteration and value iteration (need to prove for Bellman optimality equation) all converge to optimal points</pre>
 </div>
+<div created="20200227061423420" modified="20200227061427844" tags="[[deep learning]]" title="Convolutional Neural Networks" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-convolutional-neural-networks</pre>
+</div>
 <div author="Siddharth Joshi" created="20191122022337773" modified="20191122024526637" tags="[[machine learning]] [[feature engineering]]" title="Data Imputation Techniques" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Techniques to impute a feature value when one is missing for a given example:
 
@@ -11356,6 +11361,22 @@ Disadvantages:
 
 How to learn thresholds effectively when discretizing data - ''Question''
 </pre>
+</div>
+<div created="20200227025752338" modified="20200227061320314" tags="[[deep learning]] [[machine learning]]" title="Deep Learning" revision="2" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-deep-learning
+
+In more depth:
+
+* [[Convolutional Neural Networks]]
+
+* [[Recurrent Neural Networks]]
+
+* [[Deep Learning Practical Tips]]
+
+</pre>
+</div>
+<div created="20200227061454658" modified="20200227061459156" tags="[[deep learning]]" title="Deep Learning Practical Tips" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-deep-learning-tips-and-tricks</pre>
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120062447902" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]] incomplete [[needs formatting]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Link to Paper
@@ -12074,7 +12095,7 @@ Hyperparameters in NNC:
 
 It is the fundamental basis for all functional programming languages. </pre>
 </div>
-<div created="20200225221832828" modified="20200227023456210" tags="[[computer architecture]]" title="Large and Fast: Exploiting Memory Hierarchy" revision="13" bag="default">
+<div created="20200225221832828" modified="20200227023457441" tags="[[computer architecture]]" title="Large and Fast: Exploiting Memory Hierarchy" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Memory Technology:
 
 * SRAM - usually used in cache - 0.5ns - 2.5ns - $2000-$5000 per GB
@@ -12417,6 +12438,9 @@ Summary - https://imgur.com/cgsGbJD
 
 
 </pre>
+</div>
+<div created="20200227061550062" modified="20200227061613676" tags="[[machine learning]]" title="Machine Learning Practical Tips" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-machine-learning-tips-and-tricks</pre>
 </div>
 <div created="20200212050201203" modified="20200212060016088" tags="[[reinforcement learning]] [[Markov Decision Processes from scratch]]" title="Markov Decision Processes" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>A Markov Decision Process is MRP with decisions:
@@ -13151,6 +13175,9 @@ ML in practice:
 * Learn models
 * Interpret Results and tweak accordingly</pre>
 </div>
+<div created="20200227025649148" modified="20200227025650898" title="Overview of Supervised Learning" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-supervised-learning</pre>
+</div>
 <div created="20200204064753630" modified="20200204064918698" tags="technology" title="PaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Platform as a service (PaaS) or application platform as a service (aPaaS) or platform-based service is a category of cloud computing services that provides a platform allowing customers to develop, run, and manage applications without the complexity of building and maintaining the infrastructure typically associated with developing and launching an app.
 
@@ -13549,8 +13576,8 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200211214548512" modified="20200211215033376" tags="incomplete [[machine learning]]" title="Recurrent Neural Network" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>https://towardsdatascience.com/recurrent-neural-networks-rnn-explained-the-eli5-way-3956887e8b75</pre>
+<div created="20200227061342344" modified="20200227061350328" tags="[[deep learning]]" title="Recurrent Neural Networks" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-recurrent-neural-networks</pre>
 </div>
 <div created="20200210183218722" modified="20200210191628670" tags="[[machine learning]]" title="Regularization and Overfitting" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overfitting in polynomial regression: https://imgur.com/JlRPEc9
@@ -14051,7 +14078,7 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 * [[Chapter 4 |Chapter 4 (The Hundred-Page Machine Learning Book)]]
 * [[Chapter 5 |Chapter 5 (The Hundred-Page Machine Learning Book)]]</pre>
 </div>
-<div created="20200225203417564" modified="20200225220237478" tags="[[computer architecture]]" title="The Processor (Advanced Pipelining)" revision="9" bag="default">
+<div created="20200225203417564" modified="20200225220238579" tags="[[computer architecture]]" title="The Processor (Advanced Pipelining)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Instruction-Level Parallelism:
 
 * Pipelining - executing multiple instructions in parallel
@@ -14588,7 +14615,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Regularization and Overfitting]]
 # [[Overview of Supervised Learning]]</pre>
 </div>
-<div created="20200115032001461" modified="20200225221801002" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200115032001461" modified="20200225221802083" tags="[[computer architecture]] ucla" title="UCLA CS M151B - Computer Architecture" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Computer Abstractions and Technology]]
 # [[Instructions: Language of the Computer]]
@@ -14644,6 +14671,9 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Generalizations of Networks]]
 # [[Models of Networks]]
 </pre>
+</div>
+<div created="20200227025721288" modified="20200227025734641" tags="[[machine learning]]" title="Unsupervised Learning" revision="1" bag="default">
+<pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning</pre>
 </div>
 <div created="20200220222338216" modified="20200222071649293" tags="[[reinforcement learning]]" title="Value Function Approximation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__[[Why we need Value Function Approximation]]__
