Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9983,7 +9983,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200227025629167" list="[[UCLA CS M146 - Machine Learning]] [[Overview of Supervised Learning]] Welcome [[How to Contribute?]]" modified="20200227061451759" title="$:/StoryList" revision="31" bag="default">
+<div created="20200227025629167" list="" modified="20200227061451759" title="$:/StoryList" revision="37" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -13175,7 +13175,7 @@ ML in practice:
 * Learn models
 * Interpret Results and tweak accordingly</pre>
 </div>
-<div created="20200227025649148" modified="20200227025650898" title="Overview of Supervised Learning" revision="1" bag="default">
+<div created="20200227025649148" modified="20200227062100189" tags="[[machine learning]]" title="Overview of Supervised Learning" revision="2" bag="default">
 <pre>https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-supervised-learning</pre>
 </div>
 <div created="20200204064753630" modified="20200204064918698" tags="technology" title="PaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
